# My_C_GUI_Calculator

./: CMakeLists.txt  README.md  calculator.c  calculator.h
